TESB-12503 - DemoREST can not export with service locator when the studio path contains ()
git-svn-id: http://talendforge.org/svn/tos/branches/branch-5_3@113125 f6f1c999-d317-4740-80b0-e6d1abc6f99e