@@ -21,7 +21,8 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.LineNumberReader;
-import java.net.URI;
+import java.net.MalformedURLException;
+import java.net.URL;
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -127,16 +128,16 @@ import org.talend.repository.ProjectManager;
 
 /**
  * Creat the package folder for the java file, and put the generated file to the correct folder.
- * 
+ *
  * The creation for the java package should follow the pattern below:
- * 
+ *
  * 1)The name for the first grade folder should keep same with the T.O.S project name. 2)The folder name within the
  * project should be the job name.
- * 
+ *
  * <br/>
- * 
+ *
  * $Id: JavaProcessor.java 2007-1-22 上�?�10:53:24 yzhang $
- * 
+ *
  */
 @SuppressWarnings("restriction")
 public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpointListener {
@@ -173,9 +174,9 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /**
      * Set current status.
-     * 
+     *
      * DOC yzhang Comment method "setStatus".
-     * 
+     *
      * @param states
      */
     public void setStatus(IJavaProcessorStates states) {
@@ -184,7 +185,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /**
      * Constructs a new JavaProcessor.
-     * 
+     *
      * @param process Process to be turned in Java code.
      * @param filenameFromLabel Tells if filename is based on id or label of the process.
      */
@@ -213,7 +214,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /*
      * Initialization of the variable codePath and contextPath.
-     * 
+     *
      * @see org.talend.designer.runprocess.IProcessor#initPaths(org.talend.core.model .process.IContext)
      */
     @Override
@@ -276,7 +277,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /**
      * DOC chuang Comment method "computeMethodSizeIfNeeded".
-     * 
+     *
      * @param processCode
      * @return
      */
@@ -318,7 +319,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
     /*
      * Append the generated java code form context into java file wihtin the project. If the file not existed new one
      * will be created.
-     * 
+     *
      * @see org.talend.designer.runprocess.IProcessor#generateCode(org.talend.core .model.process.IContext, boolean,
      * boolean, boolean, boolean)
      */
@@ -332,7 +333,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
     /*
      * Append the generated java code form context into java file wihtin the project. If the file not existed new one
      * will be created.
-     * 
+     *
      * @see org.talend.designer.runprocess.IProcessor#generateCode(org.talend.core .model.process.IContext, boolean,
      * boolean, boolean)
      */
@@ -494,7 +495,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /**
      * DOC nrousseau Comment method "formatCode".
-     * 
+     *
      * @param processCode
      * @return
      */
@@ -570,7 +571,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /*
      * (non-Javadoc)
-     * 
+     *
      * @see org.talend.designer.runprocess.IProcessor#getCodeContext()
      */
     @Override
@@ -584,7 +585,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /*
      * (non-Javadoc)
-     * 
+     *
      * @see org.talend.designer.runprocess.IProcessor#getCodePath()
      */
     @Override
@@ -594,7 +595,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /*
      * (non-Javadoc)
-     * 
+     *
      * @see org.talend.designer.runprocess.IProcessor#getContextPath()
      */
     @Override
@@ -604,7 +605,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /*
      * (non-Javadoc)
-     * 
+     *
      * @see org.talend.designer.runprocess.IProcessor#getCodeProject()
      */
     @Override
@@ -614,7 +615,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /**
      * Find line numbers of the beginning of the code of process nodes.
-     * 
+     *
      * @param file Code file where we are searching node's code.
      * @param nodes List of nodes searched.
      * @return Line numbers where code of nodes appears.
@@ -669,7 +670,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /**
      * Return line number where stands specific node in code generated.
-     * 
+     *
      * @param nodeName
      */
     @Override
@@ -692,7 +693,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /**
      * Tells if a line is a line of perl code, not an empty or comment line.
-     * 
+     *
      * @param line The tested line of code.
      * @return true if the line is a line of code.
      */
@@ -703,7 +704,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /**
      * Set java breakpoints in a java file.
-     * 
+     *
      * @param srcFile Java file in wich breakpoints are added.
      * @param lineNumbers Line numbers in the source file where breakpoints are installed.
      * @throws CoreException Breakpoint addition failed.
@@ -719,9 +720,9 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /**
      * Get the required project package under java project, if not existed new one will be created.
-     * 
+     *
      * DOC yzhang Comment method "getProjectPackage".
-     * 
+     *
      * @param packageName The required package name, should keep same with the T.O.S project name.
      * @return The required packaged.
      * @throws JavaModelException
@@ -759,9 +760,9 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
     /**
      * Get the required job package under the project package within the tranfered project, if not existed new one will
      * be created.
-     * 
+     *
      * DOC yzhang Comment method "getJobPackage".
-     * 
+     *
      * @param projectPackage The project package within which the job package you need to get, can be getted by method
      * getProjectPackage().
      * @param jobName The required job package name.
@@ -782,7 +783,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /*
      * Get the interpreter of Java.
-     * 
+     *
      * @see org.talend.designer.runprocess.IProcessor#getInterpreter()
      */
     @Override
@@ -822,7 +823,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /**
      * Getter for compliedCodePath.
-     * 
+     *
      * @return the compliedCodePath
      */
     public IPath getCompiledCodePath() {
@@ -831,7 +832,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /**
      * Getter for compiledContextPath.
-     * 
+     *
      * @return the compiledContextPath
      */
     public IPath getCompiledContextPath() {
@@ -840,7 +841,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /**
      * Getter for codePath.
-     * 
+     *
      * @return the codePath
      */
     public IPath getSrcCodePath() {
@@ -849,7 +850,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /**
      * Getter for srcContextPath.
-     * 
+     *
      * @return the srcContextPath
      */
     public IPath getSrcContextPath() {
@@ -1019,8 +1020,8 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
         } else {
             List<String> list = new ArrayList<String>();
             if (":".equals(classPathSeparator)) { //$NON-NLS-1$
-                list.add("cd `dirname $0`\n"); //$NON-NLS-1$ 
-                list.add("ROOT_PATH=`pwd`\n"); //$NON-NLS-1$ 
+                list.add("cd `dirname $0`\n"); //$NON-NLS-1$
+                list.add("ROOT_PATH=`pwd`\n"); //$NON-NLS-1$
             } else {
                 list.add("%~d0\r\n"); //$NON-NLS-1$
                 list.add("cd %~dp0\r\n"); //$NON-NLS-1$
@@ -1142,7 +1143,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /*
      * (non-Javadoc)
-     * 
+     *
      * @see org.talend.designer.runprocess.IProcessor#getProcessorType()
      */
     @Override
@@ -1152,7 +1153,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /*
      * (non-Javadoc)
-     * 
+     *
      * @see org.talend.designer.runprocess.IProcessor#getProcessorStates()
      */
     @Override
@@ -1167,7 +1168,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /*
      * Get current class name, and it imported package structure.
-     * 
+     *
      * @see org.talend.designer.runprocess.IProcessor#getTypeName()
      */
     @Override
@@ -1177,7 +1178,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /*
      * (non-Javadoc)
-     * 
+     *
      * @see org.talend.designer.runprocess.IProcessor#saveLaunchConfiguration()
      */
     @Override
@@ -1233,7 +1234,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /*
      * (non-Javadoc)
-     * 
+     *
      * @see org.talend.designer.runprocess.Processor#generateContextCode()
      */
     @Override
@@ -1353,7 +1354,18 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
         if (samEnabled || slEnabled) {
             String eclipseHome = (String) System.getProperties().get("eclipse.home.location"); //$NON-NLS-1$
-            File esbConfigsSourceFolder = new File(URI.create(eclipseHome + "esb")); //$NON-NLS-1$
+
+            File esbConfigsSourceFolder;
+            try {
+                esbConfigsSourceFolder = new File(new URL(eclipseHome).getPath(), "esb"); //$NON-NLS-1$
+            } catch (MalformedURLException e) {
+                RunProcessPlugin
+                        .getDefault()
+                        .getLog()
+                        .log(new Status(IStatus.WARNING, RunProcessPlugin.getDefault().getBundle().getSymbolicName(),
+                                "incorrect ESB configuration folder path - " + eclipseHome + "esb")); //$NON-NLS-1$
+                return;
+            }
             if (!esbConfigsSourceFolder.exists()) {
                 RunProcessPlugin
                         .getDefault()
@@ -1380,7 +1392,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /**
      * Check current stream whether zip stream by check header signature. Zip header signature = 0x504B 0304(big endian)
-     * 
+     *
      * @param wsdlStream the wsdl stream. <b>Must Support Mark&Reset . Must at beginning of stream.</b>
      * @return true, if is zip stream.
      * @throws IOException Signals that an I/O exception has occurred.
@@ -1489,7 +1501,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /*
      * (non-Javadoc)
-     * 
+     *
      * @see org.eclipse.jdt.debug.core.IJavaBreakpointListener#addingBreakpoint(org
      * .eclipse.jdt.debug.core.IJavaDebugTarget, org.eclipse.jdt.debug.core.IJavaBreakpoint)
      */
@@ -1500,7 +1512,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /*
      * (non-Javadoc)
-     * 
+     *
      * @seeorg.eclipse.jdt.debug.core.IJavaBreakpointListener#
      * breakpointHasCompilationErrors(org.eclipse.jdt.debug.core. IJavaLineBreakpoint,
      * org.eclipse.jdt.core.dom.Message[])
@@ -1513,7 +1525,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /*
      * (non-Javadoc)
-     * 
+     *
      * @seeorg.eclipse.jdt.debug.core.IJavaBreakpointListener# breakpointHasRuntimeException(org.eclipse.jdt.debug.core.
      * IJavaLineBreakpoint, org.eclipse.debug.core.DebugException)
      */
@@ -1525,7 +1537,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /*
      * (non-Javadoc)
-     * 
+     *
      * @see org.eclipse.jdt.debug.core.IJavaBreakpointListener#breakpointHit(org. eclipse.jdt.debug.core.IJavaThread,
      * org.eclipse.jdt.debug.core.IJavaBreakpoint)
      */
@@ -1537,7 +1549,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /*
      * (non-Javadoc)
-     * 
+     *
      * @see org.eclipse.jdt.debug.core.IJavaBreakpointListener#breakpointInstalled
      * (org.eclipse.jdt.debug.core.IJavaDebugTarget , org.eclipse.jdt.debug.core.IJavaBreakpoint)
      */
@@ -1548,7 +1560,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /*
      * (non-Javadoc)
-     * 
+     *
      * @see org.eclipse.jdt.debug.core.IJavaBreakpointListener#breakpointRemoved(
      * org.eclipse.jdt.debug.core.IJavaDebugTarget, org.eclipse.jdt.debug.core.IJavaBreakpoint)
      */
@@ -1562,7 +1574,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /**
      * yzhang Comment method "updateGraphicalNodeBreaking".
-     * 
+     *
      * @param breakpoint
      */
     private void updateGraphicalNodeBreaking(IJavaBreakpoint breakpoint, boolean removed) {
@@ -1636,7 +1648,7 @@ public class JavaProcessor extends AbstractJavaProcessor implements IJavaBreakpo
 
     /*
      * (non-Javadoc)
-     * 
+     *
      * @see org.eclipse.jdt.debug.core.IJavaBreakpointListener#installingBreakpoint
      * (org.eclipse.jdt.debug.core.IJavaDebugTarget , org.eclipse.jdt.debug.core.IJavaBreakpoint,
      * org.eclipse.jdt.debug.core.IJavaType)
